fix：删除apidoc的服务管理前端组件的对字体大小的修改，影响了整体框架。

--- a/openapi-framework-apidoc/src/main/resources/static/plugin/bossedit/css/common.css
+++ b/openapi-framework-apidoc/src/main/resources/static/plugin/bossedit/css/common.css
@@ -535,7 +535,7 @@ audio,canvas,video {
     *zoom:1}
 
 body,button,input,select,textarea {
-    font: 9pt/1.5 Microsoft YaHei,tahoma,arial,Hiragino Sans GB,\5b8b\4f53
+    /*font: 9pt/1.5 Microsoft YaHei,tahoma,arial,Hiragino Sans GB,\5b8b\4f53*/
 }
 
 input,select,textarea {
