优化了apidoc的详情详细菜单底部最后一个被遮盖的问题。

--- a/openapi-framework-apidoc/src/main/resources/static/portal/style/css/main.css
+++ b/openapi-framework-apidoc/src/main/resources/static/portal/style/css/main.css
@@ -1,7 +1,7 @@
 a {color:#5FB878; text-decoration:none;}
 a:hover {color:#009688}
 
-.container {width:1190px;margin: 0 auto;background-color: #FFFFFF;margin-bottom: 60px;}
+.container {width:1190px;margin: 0 auto;background-color: #FFFFFF; margin-bottom:20px;}
 .container-left {width:200px;  display: inline-block;vertical-align: top; }
 .container-main {width:989px;border-left: 1px solid #f1f1f1; display: inline-block; margin-left: -5px;min-height: 600px;}
 
@@ -28,7 +28,10 @@ a:hover {color:#009688}
 .doc-menu .item-this a ,.doc-menu .item-this a:hover {color:#fff;  background-color: #5FB878;border-bottom:0;}
 
 /* 页脚 */
-.foot { position: fixed;bottom: 0;width: 100%; background-color: #2F4056;  height: 40px;line-height: 40px;  margin-top: 20px;  color: #dddddd;  text-align: center;  }
+.foot {
+    /*position: fixed;*/
+    /*bottom: 0;*/
+    width: 100%; background-color: #2F4056;  height: 40px;line-height: 40px;  margin-top: 20px;  color: #dddddd;  text-align: center;  }
 
 
 
